apps/mimir-chat/overlays/production/mimir-chat-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimir-chat-web
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: mimir.contextsuite.com
      http:
        paths:
          - backend:
              service:
                name: mimir-chat-web
                port:
                  number: 3000
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - mimir.contextsuite.com
      secretName: star-contextsuite-com-tls
